# gfl

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  agents.md  app.js  catalog.js  contribute.html  custom-icons.json  github-contrib.js  image-trace.js  index.html  jscad-editor.js  printer.js  renderer.js  standards.json  style.css  trace_debug.py
.github/workflows/: code-checks.yml  hardware-gen.yml  pages.yml  pr-preview.yml
hardware-gen/: generate.py  generate_custom_icons.py  generate_standards_json.py  pyproject.toml
hardware-gen/config/: bolts_screws.yaml  misc.yaml  nuts.yaml  standards_meta.yaml  washers.yaml
hardware-gen/docs/: fastener-parameters.md
hardware-gen/freecad_scripts/: dump_fastener_capabilities.py  dump_fastener_types.py  stage2_2d.py
hardware-gen/pipeline/: build123d_engine.py  capabilities.py  engine_base.py  fastener_capabilities.json  fastener_types.json  freecad_engine.py  models.py  standards.py  svg_crop.py
hardware-gen/tests/: test_capabilities.py
pr-preview/pr-19/: .gitignore  AGENTS.md  README.md  app.js  catalog.js  github-contrib.js  jscad-worker.js  printer.js  style.css
pr-preview/pr-19/hardware-gen/: README.md  generate_standards_json.py  requirements.txt
pr-preview/pr-19/hardware-gen/config/: bolts_screws.yaml
pr-preview/pr-19/hardware-gen/freecad_scripts/: stage1_3d.py  stage2_2d.py
pr-preview/pr-19/print-agent/: README.md  agent.md  raster-opus.md
print-agent/: README.md  agent.py
standards-jscad/: iso10511.js  iso10642.js  iso4032.js  iso4762.js  iso7089.js  iso7380.js
tests/: image-trace.test.js
(+2 files in other folders)
